--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,15 @@ a {
     color-scheme: dark;
   }
 }
+
+  .goldFlexWrap{
+    padding-top:7vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .menu{
+    padding-top: 7vh;
+  }
+
